# google-adk-a2a-examples

./: README.md  config.py  main.py  pyproject.toml
elevenlabs_agent/: __main__.py  agent.py  agent_executor.py  prompt.py  test_client.py
notion_agent/: agent.py  prompt.py
utils/: custom_adk_patches.py
